--- a/knockoutjs/package.json
+++ b/knockoutjs/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "knockout": "^3.5.1"
+    "knockout": "^3.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "serve": "^11.2.0"
